--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/media.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <title>Академия кровли</title>
 </head>
 
@@ -17,7 +17,7 @@
                 <ul class="header__nav">
                     <li class="header__nav-link mobile-element">
                         <a href="#">
-                            <img src="/logo.png" alt="logo" class="logo">
+                            <img src="logo.png" alt="logo" class="logo">
                         </a>
                     </li>
                     <li class="header__sub-nav-link header__sub-nav-phone mobile-element">
@@ -29,7 +29,7 @@
                         <span></span>
                     </li>
                     <ul class="menu-mobile">
-                        <li class="header__nav-link"><a href="#"><img src="/home-icon.svg" alt="home-icon"></a></li>
+                        <li class="header__nav-link"><a href="#"><img src="home-icon.svg" alt="home-icon"></a></li>
                         <li class="header__nav-link"><a href="#">Каталог</a></li>
                         <li class="header__nav-link"><a href="#">Преимущества</a></li>
                         <li class="header__nav-link"><a href="#">Примеры работ</a></li>
@@ -40,9 +40,9 @@
                         <li class="header__sub-nav-link header__sub-nav-social mobile-element">
                             <p class="question">Отвечаем <b>онлайн</b></p>
                             <div class="header__sub-nav-social-link">
-                                <img src="/vb.svg" alt="viber">
-                                <img src="/wh.svg" alt="whatsap">
-                                <img src="/tl.svg" alt="telegram">
+                                <img src="vb.svg" alt="viber">
+                                <img src="wh.svg" alt="whatsap">
+                                <img src="tl.svg" alt="telegram">
                             </div>
                         </li>
                     </ul>
@@ -60,15 +60,15 @@
                     </li>
                     <li class="header__sub-nav-link">
                         <a href="#">
-                            <img src="/logo.png" alt="logo" class="logo">
+                            <img src="logo.png" alt="logo" class="logo">
                         </a>
                     </li>
                     <li class="header__sub-nav-link header__sub-nav-social pc-element">
                         <p class="question">Отвечаем <b>онлайн</b></p>
                         <div class="header__sub-nav-social-link">
-                            <img src="/vb.svg" alt="viber">
-                            <img src="/wh.svg" alt="whatsap">
-                            <img src="/tl.svg" alt="telegram">
+                            <img src="vb.svg" alt="viber">
+                            <img src="wh.svg" alt="whatsap">
+                            <img src="tl.svg" alt="telegram">
                         </div>
                     </li>
                     <li class="header__sub-nav-link header__sub-nav-phone">
@@ -84,7 +84,7 @@
                         <div class="offer__cards">
                             <div class="offer__card card-one">
                                 <div class="burger-card">
-                                    <img src="/plus.svg" alt="plus" class="plus">
+                                    <img src="plus.svg" alt="plus" class="plus">
                                 </div>
                                 <p><b>Гарантия от 50 лет </b>на материалы и 5 лет на монтаж</p>
                             </div>
